# aerdncan

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README
example/: Makefile  README.md  battery_node.c
scripts/: dsdlc.sh  setup_socketcan.sh  wndx_cmake_build.sh
stm/: CMakeLists.txt  aerdncan.ioc
stm/Inc/: main.h  stm32f4xx_hal_conf.h  uavcan.equipment.power.BatteryInfo.h
stm/Src/: adc.c  can.c  gpio.c  main.c  tim.c  uavcan.equipment.power.BatteryInfo.c
stm/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
stm/cmake/stm32cubemx/: CMakeLists.txt
